<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/bill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:ems="10"
        android:hint="@string/TipAm"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="129dp"
        android:layout_height="19dp"
        android:layout_marginTop="64dp"
        android:text="@string/tipPrec"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/bill"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/bill"
        app:layout_constraintTop_toBottomOf="@+id/bill" />

    <SeekBar
        android:id="@+id/percent"
        android:layout_width="204dp"
        android:layout_height="33dp"
        android:layout_marginTop="24dp"
        android:scaleX="2"
        android:scaleY="2"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/percentText"
        android:layout_width="80dp"
        android:layout_height="29dp"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/percent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/percent"
        app:layout_constraintTop_toBottomOf="@+id/percent" />

    <Button
        android:id="@+id/calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/Calc"
        app:layout_constraintEnd_toEndOf="@+id/percent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="@+id/percent"
        app:layout_constraintTop_toBottomOf="@+id/percent" />

    <TextView
        android:id="@+id/tipText"
        android:layout_width="155dp"
        android:layout_height="29dp"
        android:layout_marginStart="76dp"
        android:text="@string/iznos_napojnice"
        app:layout_constraintBottom_toBottomOf="@+id/tip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tip" />

    <TextView
        android:id="@+id/tip"
        android:layout_width="80dp"
        android:layout_height="29dp"
        android:layout_marginTop="148dp"
        android:layout_marginEnd="100dp"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/percent" />

    <TextView
        android:id="@+id/resultText"
        android:layout_width="155dp"
        android:layout_height="29dp"
        android:layout_marginStart="76dp"
        android:text="@string/sum"
        app:layout_constraintBottom_toBottomOf="@+id/result"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/result"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/result"
        android:layout_width="80dp"
        android:layout_height="29dp"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/tip"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/resultText"
        app:layout_constraintTop_toBottomOf="@+id/tip" />

</androidx.constraintlayout.widget.ConstraintLayout>